[package]
authors = ["Chevdor <chevdor@gmail.com>"]
description = "A tool to query your ssh config"
edition = "2021"
keywords = ["ssh", "chevdor", "cli"]
license = "MIT"
name = "sshq"
readme = "README.md"
repository = "https://github.com/chevdor/sshq"
version = "0.1.7"

[dependencies]
clap = { version = "4", features = ["derive", "env", "unicode", "cargo"] }
dirs = "4.0"
env_logger = "0.10"
log = "0.4"
serde = "1.0"
ssh_cnfg = { git = "https://github.com/chevdor/ssh_cnfg", tag = "v0.4.0" }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[dev-dependencies]
assert_cmd = "2.0"
