[package]
authors = ["Chevdor <chevdor@gmail.com>"]
description = "A tool to query your ssh config"
edition = "2021"
keywords = ["ssh", "chevdor", "cli"]
license = "MIT"
name = "sshq"
readme = "README.md"
repository = "https://github.com/chevdor/sshq"
version = "0.3.1"

[dependencies]
clap = { version = "4", features = ["derive", "env", "unicode", "cargo"] }
dirs = "6"
env_logger = "0.11"
glob = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ssh_cnfg = "0.4"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"

[dev-dependencies]
assert_cmd = "2.0"
serde_json = "1.0"
